--- a/.travis.yml
+++ b/.travis.yml
@@ -1,8 +1,12 @@
 language: python
+sudo: false
 python:
-    - "2.6"
     - "2.7"
-    - "3.3"
+    - "3.6"
+    - "nightly"
+matrix:
+  allow_failures:
+  - python: "nightly"
 install:
     - pip install -q -e .
 script:
