Fix PyPi classifier

--- a/setup.cfg
+++ b/setup.cfg
@@ -7,7 +7,7 @@ description-file = README.rst
 home-page = http://github.com/coddingtonbear/python-measurement
 license = MIT License
 classifier =
-    Development Status :: 5 - Production
+    Development Status :: 5 - Production/Stable
     Intended Audience :: Developers
     License :: OSI Approved :: MIT License
     Operating System :: OS Independent
