--- a/setup.cfg
+++ b/setup.cfg
@@ -1,11 +1,12 @@
 [metadata]
 name = measurement
 author = Adam Coddington
-author-email = me@adamcoddington.net
-summary = Easily use and manipulate unit-aware measurements in Python
-description-file = README.rst
-home-page = http://github.com/coddingtonbear/python-measurement
-license = MIT License
+author_email = me@adamcoddington.net
+description = Easily use and manipulate unit-aware measurements in Python
+long_description = file: README.rst
+url = http://github.com/coddingtonbear/python-measurement
+license = MIT
+license_file = LICENSE
 classifier =
     Development Status :: 5 - Production/Stable
     Intended Audience :: Developers
@@ -18,6 +19,29 @@ classifier =
 keywords =
     measurement
 
-[files]
-packages =
-    measurement
+[options]
+packages = find:
+include_package_data = True
+install_requires =
+    six>=1.0
+    sympy>=0.7.3
+setup_requires =
+    setuptools_scm
+    sphinx
+    pytest-runner
+tests_require =
+    pytest
+
+[options.packages.find]
+exclude =
+    tests
+
+[bdist_wheel]
+universal = 1
+
+[aliases]
+test = pytest
+
+[build_sphinx]
+source-dir = docs
+build-dir = docs/_build
