--- a/.gitignore
+++ b/.gitignore
@@ -2,8 +2,9 @@
 *egg-info*
 .Python
 bin/*
-dist/*
-include/*
-lib/*
-share/*
-pip-selfcheck.json
+build/
+.eggs/
+dist/
+include/
+lib/
+docs/_build/
