Add GitHub CI workflow

--- a/setup.cfg
+++ b/setup.cfg
@@ -44,3 +44,17 @@ test = pytest
 [build_sphinx]
 source-dir = docs
 build-dir = docs/_build
+
+[pydocstyle]
+add-ignore = D1
+
+[isort]
+atomic = true
+line_length = 88
+multi_line_output=3
+include_trailing_comma=True
+force_grid_wrap=0
+use_parentheses=True
+known_first_party = measurement, tests
+default_section=THIRDPARTY
+combine_as_imports = true
