--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -54,5 +54,8 @@ jobs:
         with:
           python-version: ${{ matrix.python-version }}
       - uses: actions/checkout@v1
-      - run: python -m pip install --upgrade setuptools wheel
+      - run: python -m pip install --upgrade setuptools wheel codecov
       - run: python setup.py test
+      - run: codecov
+        env:
+          CODECOV_TOKEN: ${{ secrets.CODECOV_TOKEN }}
