--- a/setup.cfg
+++ b/setup.cfg
@@ -30,6 +30,7 @@ setup_requires =
     pytest-runner
 tests_require =
     pytest
+    pytest-cov
 
 [options.packages.find]
 exclude =
@@ -40,6 +41,10 @@ universal = 1
 
 [aliases]
 test = pytest
+
+[tool:pytest]
+addopts =
+    --cov=measurement
 
 [build_sphinx]
 source-dir = docs
