Switch to Decimal based values

--- a/setup.cfg
+++ b/setup.cfg
@@ -13,20 +13,30 @@ classifier =
     License :: OSI Approved :: MIT License
     Operating System :: OS Independent
     Programming Language :: Python
-    Programming Language :: Python :: 2
     Programming Language :: Python :: 3
+    Programming Language :: Python :: 3 :: Only
+    Programming Language :: Python :: 3.7
+    Programming Language :: Python :: 3.8
+
     Topic :: Utilities
+    Topic :: Scientific/Engineering
+    Topic :: Scientific/Engineering :: Astronomy
+    Topic :: Scientific/Engineering :: Atmospheric Science
+    Topic :: Scientific/Engineering :: Chemistry
+    Topic :: Scientific/Engineering :: GIS
+    Topic :: Scientific/Engineering :: Mathematics
+    Topic :: Scientific/Engineering :: Physics
+    Topic :: Software Development :: Localization
 keywords =
     measurement
+python_requires = '>=3.7'
 
 [options]
 packages = find:
-include_package_data = True
-install_requires =
-    sympy>=0.7.3
 setup_requires =
     setuptools_scm
     sphinx
+    python-docs-theme
     pytest-runner
 tests_require =
     pytest
@@ -44,11 +54,22 @@ test = pytest
 
 [tool:pytest]
 addopts =
+    --doctest-glob='*.rst'
+    --doctest-modules
     --cov=measurement
+
+[coverage:report]
+show_missing = True
 
 [build_sphinx]
 source-dir = docs
 build-dir = docs/_build
+
+[flake8]
+max-line-length=88
+select = C,E,F,W,B,B950
+ignore = E203, E501, W503
+exclude = venv,.tox,.eggs
 
 [pydocstyle]
 add-ignore = D1
