--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -11,15 +11,23 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/setup-python@v1
-      - uses: actions/checkout@v1
+      - uses: actions/checkout@v2
       - run: python -m pip install isort
       - run: isort --check-only --diff --recursive .
+
+  flake8:
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/setup-python@v1
+      - uses: actions/checkout@v2
+      - run: python -m pip install flake8
+      - run: flake8 .
 
   pydocstyle:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/setup-python@v1
-      - uses: actions/checkout@v1
+      - uses: actions/checkout@v2
       - run: python -m pip install pydocstyle
       - run: pydocstyle .
 
@@ -27,7 +35,7 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/setup-python@v1
-      - uses: actions/checkout@v1
+      - uses: actions/checkout@v2
       - run: python -m pip install black
       - run: black --check --diff .
 
@@ -36,22 +44,23 @@ jobs:
       - isort
       - pydocstyle
       - black
+      - flake8
     strategy:
       matrix:
         os:
           - ubuntu-latest
+          - windows-latest
+          - macos-latest
         python-version:
-          - 3.5
-          - 3.6
           - 3.7
           - 3.8
     runs-on: ${{ matrix.os }}
     steps:
       - name: Set up Python ${{ matrix.python-version }}
-        uses: actions/setup-python@v1.1.1
+        uses: actions/setup-python@v1
         with:
           python-version: ${{ matrix.python-version }}
-      - uses: actions/checkout@v1
+      - uses: actions/checkout@v2
       - run: python -m pip install --upgrade setuptools wheel codecov
       - run: python setup.py test
       - run: codecov
