--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -39,6 +39,16 @@ jobs:
       - run: python -m pip install black
       - run: black --check --diff .
 
+  docs:
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/setup-python@v1
+      - run: sudo apt-get install -y graphviz
+      - uses: actions/checkout@v2
+      - run: git fetch --prune --unshallow
+      - run: python setup.py develop
+      - run: python setup.py build_sphinx -W
+
   pytest:
     needs:
       - isort
