Fix readme for PyPi and add dist check to CI suite

--- a/setup.cfg
+++ b/setup.cfg
@@ -4,6 +4,7 @@ author = Adam Coddington
 author_email = me@adamcoddington.net
 description = Easily use and manipulate unit-aware measurements in Python
 long_description = file: README.rst
+long_description_content_type = text/x-rst
 url = http://github.com/coddingtonbear/python-measurement
 license = MIT
 license_file = LICENSE
