--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -49,6 +49,15 @@ jobs:
       - run: python setup.py develop
       - run: python setup.py build_sphinx -W
 
+  dist:
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/setup-python@v1
+      - run: python -m pip install --upgrade pip setuptools wheel twine readme-renderer
+      - uses: actions/checkout@v2
+      - run: python setup.py sdist bdist_wheel
+      - run: python -m twine check dist/*
+
   pytest:
     needs:
       - isort
