--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -1,14 +1,14 @@
-name: PyPi Release
+name: Release
 
 on: [release]
 
 jobs:
-  build:
 
+  PyPi:
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@v1
       - uses: actions/setup-python@v1
+      - uses: actions/checkout@v2
       - name: Install dependencies
         run: python -m pip install --upgrade pip setuptools wheel twine
       - name: Build dist packages
