--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -7,6 +7,14 @@ on:
 
 jobs:
 
+  bandit:
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/setup-python@v1
+      - uses: actions/checkout@v2
+      - run: python -m pip install bandit
+      - run: bandit -r .
+
   isort:
     runs-on: ubuntu-latest
     steps:
@@ -60,10 +68,11 @@ jobs:
 
   pytest:
     needs:
-      - isort
-      - pydocstyle
+      - bandit
       - black
       - flake8
+      - isort
+      - pydocstyle
     strategy:
       matrix:
         os:
