--- a/setup.cfg
+++ b/setup.cfg
@@ -85,3 +85,19 @@ use_parentheses=True
 known_first_party = measurement, tests
 default_section=THIRDPARTY
 combine_as_imports = true
+
+[mypy]
+warn_unused_configs = True
+warn_redundant_casts = True
+disallow_subclassing_any = True
+disallow_any_generics = True
+disallow_untyped_calls = True
+disallow_untyped_defs = True
+disallow_incomplete_defs = True
+check_untyped_defs = True
+disallow_untyped_decorators = True
+no_implicit_optional = True
+warn_unused_ignores = True
+warn_return_any = True
+strict_optional = True
+ignore_missing_imports = True
