--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -12,7 +12,7 @@ jobs:
     steps:
       - uses: actions/setup-python@v1
       - uses: actions/checkout@v2
-      - run: python -m pip install bandit
+      - run: python -m pip install bandit==1.6.2
       - run: bandit -r .
 
   isort:
