Fix: Improve list of runtime requirements
- Sphinx and the Python Docs Sphinx Theme are now only pulled in by the
  GHA CI job building the documentation.
- `pytest-runner` moved to the `tests_require` section.

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -54,7 +54,7 @@ jobs:
       - run: sudo apt-get install -y graphviz
       - uses: actions/checkout@v2
       - run: git fetch --prune --unshallow
-      - run: python -m pip install pip setuptools wheel
+      - run: python -m pip install pip setuptools wheel sphinx python-docs-theme
       - run: python setup.py develop
       - run: python setup.py build_sphinx -W
 
