--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -55,6 +55,7 @@ jobs:
       - uses: actions/checkout@v2
       - run: git fetch --prune --unshallow
       - run: python -m pip install pip setuptools wheel
+      - run: python -m pip install -r docs/requirements.txt
       - run: python setup.py develop
       - run: python setup.py build_sphinx -W
 
