--- a/setup.cfg
+++ b/setup.cfg
@@ -37,9 +37,7 @@ python_requires = '>=3.7'
 packages = find:
 setup_requires =
     setuptools_scm
-    sphinx
-    python-docs-theme
-    pytest-runner
+    pytest_runner
 tests_require =
     pytest
     pytest-cov
