--- a/setup.cfg
+++ b/setup.cfg
@@ -1,88 +1,4 @@
-[metadata]
-name = measurement
-author = Adam Coddington
-author_email = me@adamcoddington.net
-description = Easily use and manipulate unit-aware measurements in Python
-long_description = file: README.rst
-long_description_content_type = text/x-rst
-url = http://github.com/coddingtonbear/python-measurement
-license = MIT
-license_file = LICENSE
-classifier =
-    Development Status :: 5 - Production/Stable
-    Intended Audience :: Developers
-    License :: OSI Approved :: MIT License
-    Operating System :: OS Independent
-    Programming Language :: Python
-    Programming Language :: Python :: 3
-    Programming Language :: Python :: 3 :: Only
-    Programming Language :: Python :: 3.7
-    Programming Language :: Python :: 3.8
-    Programming Language :: Python :: 3.9
-
-    Topic :: Utilities
-    Topic :: Scientific/Engineering
-    Topic :: Scientific/Engineering :: Astronomy
-    Topic :: Scientific/Engineering :: Atmospheric Science
-    Topic :: Scientific/Engineering :: Chemistry
-    Topic :: Scientific/Engineering :: GIS
-    Topic :: Scientific/Engineering :: Mathematics
-    Topic :: Scientific/Engineering :: Physics
-    Topic :: Software Development :: Localization
-keywords =
-    measurement
-python_requires = '>=3.7'
-
-[options]
-packages = find:
-setup_requires =
-    setuptools_scm
-    sphinx
-    python-docs-theme
-    pytest-runner
-tests_require =
-    pytest
-    pytest-cov
-
-[options.packages.find]
-exclude =
-    tests
-
-[bdist_wheel]
-universal = 1
-
-[aliases]
-test = pytest
-
-[tool:pytest]
-addopts =
-    --doctest-glob='*.rst'
-    --doctest-modules
-    --cov=measurement
-
-[coverage:report]
-show_missing = True
-
-[build_sphinx]
-source-dir = docs
-build-dir = docs/_build
-
 [flake8]
 max-line-length=88
 select = C,E,F,W,B,B950
-ignore = E203, E501, W503
-exclude = venv,.tox,.eggs
-
-[pydocstyle]
-add-ignore = D1
-
-[isort]
-atomic = true
-line_length = 88
-multi_line_output=3
-include_trailing_comma=True
-force_grid_wrap=0
-use_parentheses=True
-known_first_party = measurement, tests
-default_section=THIRDPARTY
-combine_as_imports = true
+ignore = E203, E501, W503, E731
