--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -7,73 +7,54 @@ on:
 
 jobs:
 
-  bandit:
+  lint:
     runs-on: ubuntu-latest
+    strategy:
+      matrix:
+        lint-command:
+          - bandit -r . -x ./tests
+          - black --check --diff .
+          - flake8 .
+          - isort --check-only --diff .
+          - pydocstyle .
     steps:
-      - uses: actions/setup-python@v1
-      - uses: actions/checkout@v2
-      - run: python -m pip install bandit==1.6.2
-      - run: bandit -r .
-
-  isort:
-    runs-on: ubuntu-latest
-    steps:
-      - uses: actions/setup-python@v1
-      - uses: actions/checkout@v2
-      - run: python -m pip install isort
-      - run: isort --check-only --diff --recursive .
-
-  flake8:
-    runs-on: ubuntu-latest
-    steps:
-      - uses: actions/setup-python@v1
-      - uses: actions/checkout@v2
-      - run: python -m pip install flake8
-      - run: flake8 .
-
-  pydocstyle:
-    runs-on: ubuntu-latest
-    steps:
-      - uses: actions/setup-python@v1
-      - uses: actions/checkout@v2
-      - run: python -m pip install pydocstyle
-      - run: pydocstyle .
-
-  black:
-    runs-on: ubuntu-latest
-    steps:
-      - uses: actions/setup-python@v1
-      - uses: actions/checkout@v2
-      - run: python -m pip install black
-      - run: black --check --diff .
+      - uses: actions/checkout@v3
+      - uses: actions/setup-python@v4
+        with:
+          python-version: "3.x"
+          cache: 'pip'
+          cache-dependency-path: 'linter-requirements.txt'
+      - run: python -m pip install -r linter-requirements.txt
+      - run: ${{ matrix.lint-command }}
 
   docs:
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/setup-python@v1
-      - run: sudo apt-get install -y graphviz
       - uses: actions/checkout@v2
-      - run: git fetch --prune --unshallow
-      - run: python -m pip install pip setuptools wheel
-      - run: python setup.py develop
-      - run: python setup.py build_sphinx -W
+      - uses: actions/setup-python@v3
+        with:
+          python-version: 3.11
+      - run: sudo apt-get install -y graphviz
+      - run: python -m pip install -e '.[docs]'
+      - run: python -m sphinx -W -b html docs docs/_build
 
   dist:
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/setup-python@v1
-      - run: python -m pip install --upgrade pip setuptools wheel twine readme-renderer
-      - uses: actions/checkout@v2
-      - run: python setup.py sdist bdist_wheel
+      - uses: actions/checkout@v3
+      - uses: actions/setup-python@v4
+        with:
+          python-version: "3.x"
+      - run: python -m pip install --upgrade pip build wheel twine
+      - run: python -m build --sdist --wheel
       - run: python -m twine check dist/*
+      - uses: actions/upload-artifact@v3
+        with:
+          path: dist/*
 
   pytest:
     needs:
-      - bandit
-      - black
-      - flake8
-      - isort
-      - pydocstyle
+      - lint
     strategy:
       matrix:
         os:
@@ -86,13 +67,10 @@ jobs:
           - 3.9
     runs-on: ${{ matrix.os }}
     steps:
-      - name: Set up Python ${{ matrix.python-version }}
-        uses: actions/setup-python@v1
+      - uses: actions/checkout@v3
+      - uses: actions/setup-python@v4
         with:
           python-version: ${{ matrix.python-version }}
-      - uses: actions/checkout@v2
-      - run: python -m pip install --upgrade setuptools wheel codecov
-      - run: python setup.py test
-      - run: codecov
-        env:
-          CODECOV_TOKEN: ${{ secrets.CODECOV_TOKEN }}
+      - run: python -m pip install .[test]
+      - run: python -m pytest
+      - uses: codecov/codecov-action@v3
