--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -7,14 +7,13 @@ jobs:
   PyPi:
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/setup-python@v1
-      - uses: actions/checkout@v2
-      - name: Install dependencies
-        run: python -m pip install --upgrade pip setuptools wheel twine
-      - name: Build dist packages
-        run: python setup.py sdist bdist_wheel
-      - name: Upload packages
-        run: python -m twine upload dist/*
-        env:
-          TWINE_USERNAME: ${{ secrets.TWINE_USERNAME }}
-          TWINE_PASSWORD: ${{ secrets.TWINE_PASSWORD }}
+    - uses: actions/checkout@v3
+    - uses: actions/setup-python@v4
+      with:
+        python-version: 3.x
+    - run: python -m pip install --upgrade pip build wheel twine
+    - run: python -m build --sdist --wheel
+    - run: python -m twine upload dist/*
+      env:
+        TWINE_USERNAME: ${{ secrets.TWINE_USERNAME }}
+        TWINE_PASSWORD: ${{ secrets.TWINE_PASSWORD }}
