Fix #75 -- Update packaging and CI to PEP518
Close #74

--- a/setup.cfg
+++ b/setup.cfg
@@ -1,46 +1,4 @@
-[metadata]
-name = measurement
-author = Adam Coddington
-author_email = me@adamcoddington.net
-description = Easily use and manipulate unit-aware measurements in Python
-long_description = file: README.rst
-url = http://github.com/coddingtonbear/python-measurement
-license = MIT
-license_file = LICENSE
-classifier =
-    Development Status :: 5 - Production/Stable
-    Intended Audience :: Developers
-    License :: OSI Approved :: MIT License
-    Operating System :: OS Independent
-    Programming Language :: Python
-    Programming Language :: Python :: 2
-    Programming Language :: Python :: 3
-    Topic :: Utilities
-keywords =
-    measurement
-
-[options]
-packages = find:
-include_package_data = True
-install_requires =
-    sympy>=0.7.3
-setup_requires =
-    setuptools_scm
-    sphinx
-    pytest-runner
-tests_require =
-    pytest
-
-[options.packages.find]
-exclude =
-    tests
-
-[bdist_wheel]
-universal = 1
-
-[aliases]
-test = pytest
-
-[build_sphinx]
-source-dir = docs
-build-dir = docs/_build
+[flake8]
+max-line-length=88
+select = C,E,F,W,B,B950
+ignore = E203, E501, W503, E731
